[tool.poetry]
name = "cooptoptiproject"
version = "0.1.0"
description = ""
authors = ["Thomas Boyer <thomas.boyer@ensta-paris.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.2"
matplotlib = "^3.7.0"
ipykernel = "^6.21.2"
plotly = "^5.13.0"
pandas = "^1.5.3"
nbformat = ">=4.2.0"
tqdm = "^4.65.0"
ipywidgets = "^8.0.6"
scipy = "^1.10.1"
nbconvert = {extras = ["webpdf"], version = "^7.3.0"}
jupyter-contrib-nbextensions = "^0.7.0"
pandoc = "^2.3"
kaleido = "0.2.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pylint = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
